# map_renderer

./: .gitignore  Cargo.toml  README.md
app/: Cargo.toml
app/src/: main.rs  map_canvas.rs  map_data.rs  path_finder.rs  plugin.rs
app/src/objects/: highway.rs  mod.rs  park.rs  railway.rs
app/src/osm/: way.rs
app/src/renderer/: color.rs  mod.rs  point.rs  renderable.rs  stroke.rs
app/src/shaders/path_finder/: frag.glsl  geom.glsl  vert.glsl
opengl/: Cargo.toml
opengl/src/: enums.rs  lib.rs  main.rs  types.rs
opengl_renderer/: Cargo.toml
opengl_renderer/src/: lib.rs  main.rs  window.rs
opengl_renderer/src/ogl/: program.rs  texture_buffer.rs
opengl_renderer/src/opengl/: mod.rs  program.rs
opengl_renderer/src/shaders/: frag.glsl  vert.glsl
opengl_renderer/src/shaders/canvas/: vert.glsl
opengl_renderer/src/shaders/canvas_fill/: frag.glsl  vert.glsl
opengl_renderer/src/shaders/canvas_outline/: frag.glsl  geom.glsl
opengl_renderer/src/shaders/line/: frag.glsl  geom.glsl  vert.glsl
opengl_renderer/src/shaders/simple/: vert.glsl
opengl_renderer/src/window/: mod.rs  opengl.rs
opengl_renderer/src/world/: line.rs  mod.rs  path.rs  polygon.rs
renderer/: Cargo.toml
renderer/src/: lib.rs  main.rs  window.rs
renderer/src/ogl/: mod.rs  program.rs
renderer/src/render_steps/: canvas.rs
renderer/src/shaders/canvas_fill/: vert.glsl
renderer/src/shaders/canvas_outline/: geom.glsl
renderer/src/shaders/line/: geom.glsl
renderer/src/shaders/polygon/: frag.glsl  vert.glsl
renderer/src/shaders/simple/: frag.glsl
src/: main.rs  map_canvas.rs  map_data.rs  path_finder.rs  plugin.rs  renderable.rs
src/objects/: building.rs  highway.rs  mod.rs  park.rs  railway.rs
src/osm/: mod.rs  node.rs  relation.rs  tags.rs  way.rs
src/renderer/: mod.rs  point.rs  renderable.rs  stroke.rs
wgpu-renderer/: Cargo.toml  index.html
wgpu-renderer/src/: lib.rs  main.rs  shader.wgsl
