[package]
name = "pbf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
osmpbf = "0.3.0"
piet = { version = "0.6.2", features = ["png"] }
piet-common = { version = "0.6.2", features = ["png"] }
piet-coregraphics = "0.6.2"
raqote = "0.8.2"
