[package]
name = "opengl"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = "0.14.0"
glam = "0.23.0"
glutin = "0.30.7"
glutin-winit = "0.3.0"
raw-window-handle = "0.5.1"
winit = "0.28.3"
