[package]
name = "renderer"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = "0.24.1"
glutin = "0.30.6"
glutin-winit = "0.3.0"
opengl = { path = "../opengl" }
raw-window-handle = "0.5.1"
winit = "0.28.2"
